Fix big gap on servers page

--- a/website/static/css/base.css
+++ b/website/static/css/base.css
@@ -175,6 +175,7 @@ a:hover {
 @media (max-width: 600px) {
   #box {
     position: unset;
+    display: unset;
   }
 }
 
